[gd_scene load_steps=40 format=2]

[ext_resource path="res://entities/actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/googlefonts/Turret_Road/hud.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/opengameart/LoneCoderEditsPara/image0000.png" type="Texture" id=3]
[ext_resource path="res://entities/actors/player/player_roll_animation.gd" type="Script" id=4]
[ext_resource path="res://entities/actors/player/hud.gd" type="Script" id=5]
[ext_resource path="res://entities/actors/player/player_collision.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/opengameart/ExileGL/ExileGL__blood.png" type="Texture" id=7]
[ext_resource path="res://entities/screens/tiledscreen/fade.gd" type="Script" id=8]
[ext_resource path="res://entities/weapons/Pistol.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/actors/player/Pause.gd" type="Script" id=10]
[ext_resource path="res://entities/actors/player/weapons.gd" type="Script" id=11]
[ext_resource path="res://assets/freesounds/325270__deleted-user-2104797__body-fall-1.wav" type="AudioStream" id=12]
[ext_resource path="res://entities/screens/tiledscreen/buttons/button.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/freesounds/413180__micahlg__male-hurt13.wav" type="AudioStream" id=14]
[ext_resource path="res://entities/screens/Title.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/googlefonts/Turret_Road/TurretRoad-ExtraBold.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/freesounds/413184__micahlg__male-hurt6.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/freesounds/413185__micahlg__male-hurt8.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/freesounds/413186__micahlg__male-hurt9.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/freesounds/396806__scorpion67890__cyborg-death-1.wav" type="AudioStream" id=20]
[ext_resource path="res://entities/actors/player/Sprite2.gd" type="Script" id=21]
[ext_resource path="res://entities/actors/player/ScoreMeter.gd" type="Script" id=22]
[ext_resource path="res://assets/freesounds/107624__stintx__running-02.wav" type="AudioStream" id=23]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ), Vector3( 0, 0.436248, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Roll")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 20 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hud/Injured/Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/Camera/Weapon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "leanleft"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ), Vector3( -1.169, 2.4, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "leanright"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ), Vector3( 1.169, 2.4, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1.31951, 1, 1.56917 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -45, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Roll")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.22,
"start_offset": 0.4,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 45, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Roll")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.22,
"start_offset": 0.4,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 45 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Roll")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.22,
"start_offset": 0.4,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -45 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Roll")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.22,
"start_offset": 0.4,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.4, 0 ), Vector3( 0, 1.8, 0 ), Vector3( 0, 2.4, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("InjuredSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 19 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("InjuredSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 17 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("InjuredSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("InjuredSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 16 )

[sub_resource type="CapsuleMesh" id=13]

[node name="Player" type="KinematicBody" groups=["Player", "player"]]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 17
collision_mask = 17
script = ExtResource( 1 )
speed = 13
gravity = 1.2
jump_power = 36
actor_name = "Player"

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573
current = true
far = 400.0

[node name="Weapon" type="Position3D" parent="Head/Camera"]
transform = Transform( -1, -1.55741e-08, 1.50915e-07, -1.06385e-08, 0.999467, 0.0326493, -1.51343e-07, 0.0326493, -0.999467, 0.605, -0.527, -0.949 )
script = ExtResource( 11 )
holder_path = NodePath("../../..")
raycast_path = NodePath("../RayLong")

[node name="Pistol" parent="Head/Camera/Weapon" instance=ExtResource( 9 )]
target_group = "Enemy"
raycast_path = NodePath("../../RayLong")
holder_path = NodePath("../../../..")

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
__meta__ = {
"_editor_description_": "You can solve the environment problem two ways:
-  Modify the default environment, because that's what a camera grabs when it does not have an environment set
-  You can save the environment resource, and then drag it into the environment slot in the GunCam"
}

[node name="Viewport" type="Viewport" parent="Head/Camera/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCam" type="Camera" parent="Head/Camera/ViewportContainer/Viewport"]
cull_mask = 2
environment = SubResource( 1 )

[node name="RayLong" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="RayShort" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="Anime" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/death = SubResource( 2 )
anims/leanleft = SubResource( 15 )
anims/leanright = SubResource( 16 )
anims/roll = SubResource( 3 )
"anims/roll back" = SubResource( 4 )
"anims/roll left" = SubResource( 5 )
anims/rollside = SubResource( 6 )
anims/walk = SubResource( 7 )
script = ExtResource( 4 )

[node name="Hud" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.823529 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Health" type="Label" parent="Hud"]
margin_right = 124.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.545098, 0.0313726, 0.0313726, 1 )
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Hud"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_right = 62.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 0.580392 )
custom_fonts/font = ExtResource( 2 )
text = "2:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hud"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -124.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.92549, 0.945098, 0.117647, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clip" type="Label" parent="Hud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 124.0
custom_colors/font_color = Color( 0.0588235, 0, 0.670588, 0.521569 )
custom_fonts/font = ExtResource( 2 )
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Ammo" type="Label" parent="Hud"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 102.472
margin_top = -15.3264
margin_right = 151.472
margin_bottom = -1.32642
text = "ammo: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Control" parent="Hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle-01" type="Sprite" parent="Hud/Cursor"]
modulate = Color( 1, 1, 1, 0.309804 )
texture = ExtResource( 3 )

[node name="Injured" type="Control" parent="Hud"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Hud/Injured"]
self_modulate = Color( 1, 1, 1, 0.541176 )
position = Vector2( -512, -292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="InjuredPlayer" type="AnimationPlayer" parent="Hud/Injured/Sprite"]
anims/Hurt0 = SubResource( 8 )
anims/Hurt1 = SubResource( 9 )
anims/Hurt2 = SubResource( 10 )
anims/Hurt3 = SubResource( 11 )

[node name="InjuredSound" type="AudioStreamPlayer" parent="Hud/Injured/Sprite"]
stream = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="Hud/Injured"]
self_modulate = Color( 1, 1, 1, 0.541176 )
position = Vector2( -512, -292 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
script = ExtResource( 21 )

[node name="ScoreMeter" type="Node2D" parent="Hud"]
modulate = Color( 1, 1, 1, 0.505882 )
position = Vector2( 720, 72 )
script = ExtResource( 22 )

[node name="Back" type="Polygon2D" parent="Hud/ScoreMeter"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 288, 0, 288, 24, 0, 24 )

[node name="Front" type="Polygon2D" parent="Hud/ScoreMeter"]
scale = Vector2( 0.5, 1 )
color = Color( 0.905882, 0.956863, 0.0392157, 1 )
polygon = PoolVector2Array( 0, 0, 288, 0, 288, 24, 0, 24 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
np_button_container = NodePath("VBoxContainer")

[node name="Polygon2D" type="Polygon2D" parent="Pause"]
color = Color( 0.223529, 0.211765, 0.211765, 0.792157 )
polygon = PoolVector2Array( -104.288, -117.271, 1272.81, -162.46, 1301.35, 850.744, -289.804, 914.961, -330.237, -105.379 )

[node name="Title" parent="Pause" instance=ExtResource( 15 )]
margin_left = 332.0
margin_top = 80.0
margin_right = 692.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 12 )
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = 214.0
margin_right = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" parent="Pause/VBoxContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_right = 360.0
method = "continue_game"
label_text = "Continue"

[node name="Label" parent="Pause/VBoxContainer/Continue" index="0"]
text = "Continue"
align = 1

[node name="TiledScreen" parent="Pause/VBoxContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 64.0
margin_right = 360.0
margin_bottom = 124.0
method = "exit_level"
label_text = "Exit Level"

[node name="Label" parent="Pause/VBoxContainer/TiledScreen" index="0"]
margin_left = 1.41425
margin_top = -1.41422
margin_right = 1.41425
margin_bottom = -1.41422
text = "Exit Level"
align = 1

[node name="Game_End" parent="Pause/VBoxContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 128.0
margin_right = 360.0
margin_bottom = 188.0
method = "game_end"
label_text = "Exit To Desktop"

[node name="Label" parent="Pause/VBoxContainer/Game_End" index="0"]
text = "Exit To Desktop"
align = 1

[node name="Area" type="Area" parent="." groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 6.51683e-07, 0, -6.51683e-07, 1, 0, 0, 0 )
visible = false

[node name="CollisionShape" parent="Area" instance=ExtResource( 6 )]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 1.2, 0 )
visible = false
mesh = SubResource( 13 )

[node name="CollisionShape" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 1.2, 0 )

[node name="Injured" type="Timer" parent="."]

[node name="JumpCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="Roll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -20.717

[connection signal="ammo_changed" from="." to="Hud" method="_on_Player_ammo_changed"]
[connection signal="clip_changed" from="." to="Hud" method="_on_Player_clip_changed"]
[connection signal="died" from="." to="." method="_on_Player_died"]
[connection signal="health_changed" from="." to="Hud" method="_on_Player_health_changed"]
[connection signal="injured" from="." to="." method="_on_Player_injured"]
[connection signal="score_changed" from="." to="Hud" method="_on_Player_score_changed"]
[connection signal="score_meter_changed" from="." to="Hud" method="_on_Player_score_meter_changed"]
[connection signal="stuned" from="." to="." method="_on_Player_stuned"]
[connection signal="animation_finished" from="Anime" to="." method="_on_Anime_animation_finished"]
[connection signal="animation_finished" from="Hud/Injured/Sprite/InjuredPlayer" to="Hud/Injured/Sprite" method="_on_InjuredPlayer_animation_finished"]
[connection signal="timeout" from="Injured" to="." method="_on_Injured_timeout"]

[editable path="Pause/VBoxContainer/Continue"]
[editable path="Pause/VBoxContainer/TiledScreen"]
[editable path="Pause/VBoxContainer/Game_End"]
